--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-
+    <script src="game-shape.js"></script>
     <script src="p5.min.js"></script>
     <script src="game.js"></script>
 </body>
