--- a/func/func.html
+++ b/func/func.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>avoid collision</title>
+    <title>Functions</title>
 </head>
-<body style="margin: 0; overflow: hidden;">
-    <script src="p5.min.js"></script>
-    <script src="game.js"></script>
+<body>
+        <button id="the-button">Click Me</button>
+        <script src="func.js"></script>
 </body>
 </html>
