--- a/mouse-events/cool-move.html
+++ b/mouse-events/cool-move.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>avoid collision</title>
+    <title>cool move</title>
 </head>
-<body style="margin: 0; overflow: hidden;">
+<body>
+    <script src="cool-move.js"></script>
     <script src="p5.min.js"></script>
-    <script src="game.js"></script>
+    <a href="mouse-events.html">pick it up</a>
 </body>
 </html>
