--- a/mouse-events/mouse-events.html
+++ b/mouse-events/mouse-events.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>avoid collision</title>
+    <title>Mouse Events</title>
 </head>
-<body style="margin: 0; overflow: hidden;">
+<body>
     <script src="p5.min.js"></script>
-    <script src="game.js"></script>
+    <script src="mouse-events.js"></script>
+    <a href="cool-move.html">a cool square</a>
 </body>
 </html>
