--- a/array/array.html
+++ b/array/array.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>avoid collision</title>
+    <title>array</title>
 </head>
-<body style="margin: 0; overflow: hidden;">
+<body>
     <script src="p5.min.js"></script>
-    <script src="game.js"></script>
+    <script src="array.js"></script>
 </body>
 </html>
