renamed to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>center</title>
+    <title>joschas website</title>
 </head>
 <body>
     <h1>Center of Joscha's games and experiments</h1>
