made mineor changes

--- a/drawing/drawing.html
+++ b/drawing/drawing.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rectangle Run</title>
+    <title>drawing</title>
 </head>
-<body style ="margin:0; padding:0; overflow:hidden;">
+<body>
     <script src="p5.min.js"></script>
-    <script src="rectangle-run.js"></script>
-    
+    <script src="drawing.js"></script>
 </body>
 </html>
