--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <h1>Center of Joscha's games and experiments</h1>
     <a href="array/array.html">array</a><br>
-    <a href="avoid collision/game.html"><img style="width:300px" src="avoid_collision.png" alt=""></a>
-    <a href="ball + rect/game.html"><img style="width:300px" src="ball+rect.png" alt="hfhgfgfd"></a><br>
-    <a href="cool website/cool-website.html"><img style="width:300px" src="cool-website.png" alt=""></a>
-    <a href="mouse-events/mouse-events.html"><img style="width:300px" src="mouse-events.png" alt=""></a><br>
-    <a href="mouse-events/cool-move.html"><img style="width:300px" src="cool-move.png" alt=""></a>
-    <a href="teaching/teaching.html"><img style="width:300px" src="teaching.png" alt=""></a><br>
-    <a href="trying_new_things/index.html"><img style="width:300px" src="trying-new-things.png" alt=""></a>
-    <a href="rectangle-run/rectangle-run.html"><img style="width:300px" src="rectangle-run.png" alt=""></a><br>
-    <a href="drone/drone.html"><img style="width:300px" src="drone.png" alt=""></a>
+    <a href="avoid collision/game.html"><img style="width:300px" src="imgs/avoid_collision.png" alt=""></a>
+    <a href="ball + rect/game.html"><img style="width:300px" src="imgs/ball+rect.png" alt="hfhgfgfd"></a><br>
+    <a href="cool website/cool-website.html"><img style="width:300px" src="imgs/cool-website.png" alt=""></a>
+    <a href="mouse-events/mouse-events.html"><img style="width:300px" src="imgs/mouse-events.png" alt=""></a><br>
+    <a href="mouse-events/cool-move.html"><img style="width:300px" src="imgs/cool-move.png" alt=""></a>
+    <a href="teaching/teaching.html"><img style="width:300px" src="imgs/teaching.png" alt=""></a><br>
+    <a href="trying_new_things/index.html"><img style="width:300px" src="imgs/trying-new-things.png" alt=""></a>
+    <a href="rectangle-run/rectangle-run.html"><img style="width:300px" src="imgs/rectangle-run.png" alt=""></a><br>
+    <a href="drone/drone.html"><img style="width:300px" src="imgs/drone.png" alt=""></a>
     <a href="func/func.html">functions experiment</a><br>
     <a href="2D-minecraft/2D-minecraft.html">made purely by AI</a>
 </body>
