--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <h1>Center of Joscha's games and experiments</h1><br>
     <a href="array/array.html">array</a><br>
     <a href="avoid collision/game.html"><img style="width:300px" src="imgs/avoid_collision.png" alt=""></a>
-    <a href="ball + rect/game.html"><img style="width:300px" src="imgs/ball+rect.png" alt="hfhgfgfd"></a><br>
-    <a href="cool website/cool-website.html"><img style="width:300px" src="imgs/cool-website.png" alt=""></a>
+    <a href="ball + rect/game.html"><img style="width:300px" src="imgs/ball+rect.png" alt="hfhgfgfd"></a>
+    <a href="cool website/cool-website.html"><img style="width:300px" src="imgs/cool-website.png" alt=""></a><br>
     <a href="mouse-events/mouse-events.html"><img style="width:300px" src="imgs/mouse-events.png" alt=""></a>
-    <a href="mouse-events/cool-move.html"><img style="width:300px" src="imgs/cool-move.png" alt=""></a><br>
-    <a href="teaching/teaching.html"><img style="width:300px" src="imgs/teaching.png" alt=""></a>
+    <a href="mouse-events/cool-move.html"><img style="width:300px" src="imgs/cool-move.png" alt=""></a>
+    <a href="teaching/teaching.html"><img style="width:300px" src="imgs/teaching.png" alt=""></a><br>
     <a href="trying_new_things/index.html"><img style="width:300px" src="imgs/trying-new-things.png" alt=""></a>
-    <a href="rectangle-run/rectangle-run.html"><img style="width:300px" src="imgs/rectangle-run.png" alt=""></a><br>
-    <a href="drone/drone.html"><img style="width:300px" src="imgs/drone.png" alt=""></a>
-    <a href="func/func.html">functions experiment</a>
+    <a href="rectangle-run/rectangle-run.html"><img style="width:300px" src="imgs/rectangle-run.png" alt=""></a>
+    <a href="drone/drone.html"><img style="width:300px" src="imgs/drone.png" alt=""></a><br>
+    <a href="func/func.html">functions experiment</a><br>
     <a href="server/form.html">server</a><br>
     <a href="2D-minecraft/2D-minecraft.html">made purely by AI</a>
 </body>
