--- a/server/form.html
+++ b/server/form.html
@@ -6,7 +6,7 @@
     <title>Form</title>
 </head>
 <body>
-    <form action="http://localhost:2315/add-new-creeper">
+    <form action="http://192.168.178.154:2315/add-new-creeper">
         <label for="creeper-name">
             Name
         </label>
